IGNITE-18224 Allow hash output sitribution for SET relations (wip).